# vocalance

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE  LICENSE.txt  MANIFEST.in  NOTICE.txt  README.md  inno_script.iss  iris.py  iris.spec  main.py  pyproject.toml  requirements-dev.txt  requirements-dist.txt  requirements.txt  vocalance.py  vocalance.spec
.cursor/rules/: environment.mdc  iris-repo-guidance.mdc  python-best-practice-instructions.mdc  python-unit-testing.mdc  simplifying-refactor.mdc  software-engineering-best-practices.mdc  system-permissions.mdc  vocalance-repo-guidance.mdc
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  docs.yml
assets/logo/: icon_generator.py
assets/sound_processing/yamnet/: LICENSE
docs/: Makefile  README.md  api_reference.rst  conf.py  contact.rst  index.rst  make.bat  requirements.txt
docs/_static/: .gitkeep  custom.css  layout-manager.js
docs/_templates/: .gitkeep
docs/developer/: audio_capture_and_listeners.rst  audio_configuration_reference.rst  audio_processing.rst  audio_recording_system.rst  audio_system_architecture.rst  command_execution.rst  command_execution_services.rst  command_parsing.rst  components.rst  dictation_system.rst  event_bus_and_infrastructure.rst  infrastructure.rst  introduction.rst  services.rst  services_overview.rst  sound_recognition_system.rst  speech_and_sound_recognition.rst  speech_to_text_system.rst  user_interface.rst
docs/setup/: installation.rst
docs/user_guide/: getting_started.rst
iris/: event_bus.py  main.py
iris/app/: event_bus.py
iris/app/assets/logo/: icon_generator.py
iris/app/config/: app_config.py  automation_command_registry.py  command_types.py  logging_config.py  stt_config.py
iris/app/events/: base_event.py  command_events.py  command_management_events.py  core_events.py  dictation_events.py  grid_events.py  mark_events.py  markov_events.py  settings_events.py  sound_events.py  stt_events.py  ui_events.py
iris/app/services/: automation_service.py  centralized_command_parser.py  command_action_map_provider.py  command_history_manager.py  command_management_service.py  mark_service.py  markov_command_predictor.py  protected_terms_service.py  protected_terms_validator.py  shutdown_coordinator.py
iris/app/services/audio/: recorder.py  simple_audio_service.py  smart_timeout_manager.py  stt_service.py  stt_utils.py  vosk_stt.py  whisper_stt.py
iris/app/services/grid/: click_tracker_service.py  grid_service.py
iris/app/services/storage/: llm_model_downloader.py  settings_service.py  settings_update_coordinator.py  storage_adapters.py  storage_models.py  storage_service.py  unified_storage_service.py
iris/app/ui/: main_window.py  startup_window.py  ui_theme.py
iris/app/ui/controls/: base_control.py  commands_control.py  dictation_control.py  dictation_popup_control.py  grid_control.py  marks_control.py  (+3 more)
iris/app/utils/: event_utils.py  number_parser.py
iris/config/: app_config.py  automation_command_registry.py  command_types.py  dictation_config.py  logging_config.py  sound_recognizer_config.py  stt_config.py
iris/events/: command_events.py  command_management_events.py  core_events.py  dictation_events.py  grid_events.py  mark_events.py  markov_events.py  settings_events.py  sound_events.py  stt_events.py  ui_events.py
iris/services/: automation_service.py  centralized_command_parser.py  command_management_service.py  mark_service.py  markov_command_predictor.py  protected_terms_service.py
iris/services/audio/: recorder.py  simple_audio_service.py  smart_timeout_manager.py  stt_service.py  stt_utils.py  vosk_stt.py  whisper_stt.py
iris/services/grid/: click_tracker_service.py  grid_service.py
iris/services/storage/: llm_model_downloader.py  settings_service.py  storage_adapters.py  unified_storage_service.py
iris/ui/: main_window.py  startup_window.py  ui_theme.py
iris/ui/controls/: base_control.py  commands_control.py  dictation_control.py  dictation_popup_control.py  grid_control.py  marks_control.py  settings_control.py  sound_control.py  system_control.py
iris/ui/utils/: font_service.py  logo_service.py  ui_assets.py  ui_icon_utils.py
iris/ui/views/: command_dialog_view.py  commands_view.py  dictation_popup_view.py  dictation_view.py  grid_view.py  mark_view.py  marks_view.py  settings_view.py  sound_view.py
iris/utils/: event_utils.py
markov_analysis_output/: analysis_report.txt
packaging/: audit_simple.py  bundle_exclusions.py  inno_script.iss  packaging-instructions.md  vocalance.spec
tests/: conftest.py  test_integration_sound_recognition.py
tests/integration/: test_integration_audio_flow.py  test_integration_sound_recognition.py  test_integration_stt_models.py  test_memory_leak_detection.py
tests/scripts/: aligned_sample_recorder.py  audio_recorder.py  sample_recorder.py  sound_recognition_sample_recorder.py
tests/services/: __init__.py  test_automation_service.py  test_centralized_command_parser.py  test_grid_service.py  test_mark_service.py  test_stt_service.py  test_vosk_stt.py  test_whisper_stt.py
tests/services/audio/: __init__.py  test_audio_integration.py  test_latency_validation.py  test_recorder.py  test_simple_audio_service.py  test_smart_timeout_manager.py  test_stt_service.py  test_stt_utils.py  test_vosk_stt.py  test_whisper_stt.py
vocalance/: main.py
vocalance/app/: event_bus.py
vocalance/app/config/: app_config.py  automation_command_registry.py  command_types.py  logging_config.py
vocalance/app/events/: base_event.py  command_events.py  command_management_events.py  core_events.py  dictation_events.py  grid_events.py  mark_events.py  sound_events.py
vocalance/app/services/: automation_service.py  centralized_command_parser.py  command_action_map_provider.py  command_history_manager.py  command_management_service.py  mark_service.py  markov_command_predictor.py  protected_terms_validator.py  shutdown_coordinator.py
vocalance/app/ui/: main_window.py  startup_window.py  ui_theme.py
vocalance/app/utils/: event_utils.py  number_parser.py
(+133 files in other folders)
