[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris"
version = "0.0.1"
description = "Voice command assistant"
readme = "README.md"
authors = [
    {name = "Riccardo Doyle", email = "r.doyle.edu@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "vosk>=0.3.42",
    "sounddevice>=0.4.4",
    "librosa>=0.9.2",
    "soundfile>=0.12.1",
    "numpy>=1.20.0",
    "faster-whisper>=1.0.0",
    "llama-cpp-python>=0.2.0",
    "scikit-learn>=1.0.2",
    "joblib>=1.0.0",
    "tensorflow-hub>=0.15.0",
    "customtkinter>=5.2.0",
    "Pillow>=9.0.0",
    "PyAutoGUI>=0.9.53",
    "pyperclip>=1.8.2",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "appdirs>=1.4.4",
    "requests>=2.25.0",
    "tqdm>=4.60.0"
]

[project.urls]
Homepage = "https://github.com/rick12000/iris"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=3.4.0",
    "black>=22.10.0",
    "flake8>=7.0.0",
    "sphinx>=8.1.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=3.0.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinxcontrib-mermaid>=0.9.2",
    "pyinstaller>=5.0.0"
]
docs = [
    "sphinx>=8.1.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=3.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-mermaid>=0.9.2",
    "linkify-it-py>=2.0.0",
    "sphinx-autobuild>=2024.2.4"
]

[tool.setuptools]
packages = {find = {exclude = ["tests*", "examples*", "docs*", "build*", "cache*", "dist*", "*.egg-info*"]}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["assets/**/*", "app/assets/**/*"]

[tool.pytest.ini_options]
markers = [
    "memory: Memory leak detection tests",
    "slow: Slow tests (models, heavy operations)",
    "stress: Stress tests under high load",
    "integration: Integration tests",
    "unit: Unit tests"
]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings"
]
